syntax = "proto3";
package teaclave_common_proto;

message UserCredential {
  string id = 1;
  string token = 2;
}

message FileCryptoInfo {
  string schema = 1;
  bytes key = 2;
  bytes iv = 3;
}

message TaskOutputs {
  bytes return_value = 1;
  map<string, string> tags_map = 2;
}

message TaskFailure {
  string reason = 1;
}

enum TaskStatus {
  Created = 0;
  DataAssigned = 1;
  Approved = 2;
  Staged = 3;
  Running = 4;
  Finished = 10;
}

message TaskResult {
  oneof result {
    teaclave_common_proto.TaskOutputs Ok = 1;
    teaclave_common_proto.TaskFailure Err = 2;
  }
}
